--- a/hobbies.html
+++ b/hobbies.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h3>My Hobbies</h3>
     <ol>
-      <li>I love <a href="#"><em>computing</em></a></li>
-      <li>I love <a href="#"><em>walking</em></a> cause it teaches one step at a time</li>
-      <li>I love to <a href="#"><em>know</em></a> things. No secrets.</li>
+      <li>I love <a href="https://en.wikipedia.org/wiki/Computing"><em>computing</em></a></li>
+      <li>I love <a href="https://www.healthline.com/health/benefits-of-walking"><em>walking</em></a> cause it teaches one step at a time</li>
+      <li>I love to <a href="https://www.ldoceonline.com/dictionary/know"><em>know</em></a> things. No secrets.</li>
     </ol>
   </body>
 </html>
